--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-pandapanda",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "a hubot script for panda responses",
   "main": "index.coffee",
   "scripts": {
@@ -13,7 +13,7 @@
   "keywords": [
     "hubot",
     "hubot-scripts",
-    "panada"
+    "panda"
   ],
   "author": "missu",
   "license": "MIT",
